gccida/g0/simplify_replace_rtx
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_replace_rtx/src/simplify-rtx.c:721:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_replace_rtx/src/simplify-rtx.c:722:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_replace_rtx/src/simplify-rtx.c:725:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_replace_rtx/src/simplify-rtx.c:727:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_replace_rtx/src/simplify-rtx.c:731:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op_mode; // [rsp+34h] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_replace_rtx/src/simplify-rtx.c:733:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op_mode_1; // [rsp+44h] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_replace_rtx/src/simplify-rtx.c:736:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op_mode_0; // [rsp+5Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_replace_rtx/src/simplify-rtx.c:738:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+68h] [rbp-18h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_replace_rtx/src/simplify-rtx.c:739:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+6Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_replace_rtx/src/simplify-rtx.c:751:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = ( unsigned int)x[1]; 
                     ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_replace_rtx/src/simplify-rtx.c:754:30: error: use of undeclared identifier 'machine_mode'
exp = simplify_gen_subreg( ( machine_mode)*( ( unsigned __int8 *)x + 2), v15, v14, v13); 
                             ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_replace_rtx/src/obj/simplify-rtx.o] Error 1
